# BankML

./: .gitignore  Dockerfile  README.md  api.py  install.sh  main.py  pyproject.toml  requirements.txt  run.sh  test_api.py  train.parquet
.github/workflows/: ci.yaml
api/: api.py
app/: api.py  test_api.py
app/features/: features_class.py
configuration/: config.yaml  configuration.py
src/bankml/: build_pipeline.py  import_data.py  train_evaluate.py
src/bankml/configuration/: columns_name.txt
src/configuration/: configuration.py
tests/: test_build_pipeline.py  test_import_data.py  test_train_evaluate.py
